[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/mouse_over.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MousePosition.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 70.8224

[node name="MousePosition" type="Area2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Overlay" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="XO" type="Sprite" parent="."]
[connection signal="input_event" from="." to="." method="_on_MousePosition_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_MousePosition_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_MousePosition_mouse_exited"]
